# gl-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
gl/: Cargo.toml  README.md  build.rs
gl/examples/: basic.rs  triangle.rs
gl/src/: lib.rs
gl_generator/: Cargo.toml  README.md
gl_generator/generators/: debug_struct_gen.rs  global_gen.rs  mod.rs  static_gen.rs  static_struct_gen.rs  struct_gen.rs
gl_generator/generators/templates/types/: egl.rs  gl.rs  glx.rs  wgl.rs
gl_generator/registry/: parse.rs
gl_generator/src/: lib.rs
gl_generator/src/generators/: debug_struct_gen.rs  global_gen.rs  mod.rs  static_gen.rs  static_struct_gen.rs  struct_gen.rs
gl_generator/src/registry/: mod.rs  parse.rs
khronos_api/: Cargo.toml  README.md  build.rs
khronos_api/src/: lib.rs
tests/test_add_registries/: Cargo.toml  build.rs
tests/test_add_registries/src/: lib.rs
tests/test_gen_symbols/: Cargo.toml  build.rs
tests/test_gen_symbols/src/: lib.rs
tests/test_no_warnings/: Cargo.toml  build.rs
tests/test_no_warnings/src/: lib.rs
tests/test_symbols/: Cargo.toml  build.rs  lib.rs
tests/test_symbols/src/: lib.rs
tests/test_unstable_api/: Cargo.toml
tests/test_webgl_stdweb/: build.rs
tests/test_with_extensions/: Cargo.toml  build.rs  lib.rs
webgl_generator/: Cargo.toml  lib.rs  utils.rs
webgl_generator/webgl_generators/: stdweb_gen.rs
webgl_generator/webgl_registry/: mod.rs  named.rs  registry.rs  types.rs
webgl_stdweb/: build.rs
