[workspace]
resolver = "3"
members = [
    "gl",
    "gl_generator",
    "tests/test_add_registries",
    "tests/test_gen_symbols",
    "tests/test_no_warnings",
    "tests/test_symbols",
    "tests/test_unstable_api",
    "tests/test_with_extensions",
    "khronos_api",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rust-windowing/gl-rs"
rust-version = "1.85"

[workspace.lints.clippy]
uninlined_format_args = "deny"
