[package]
name = "gl"
version = "0.14.0"
authors = [
    "Brendan Zabarauskas <bjzaba@yahoo.com.au>",
    "Corey Richardson",
    "Arseny Kapoulkine",
]
description = "OpenGL bindings"
license.workspace = true
repository.workspace = true
categories = ["api-bindings", "rendering::graphics-api"]
keywords = ["gl", "egl", "opengl", "khronos"]

[build-dependencies]
gl_generator = { version = "0.14.0", path = "../gl_generator" }

[dev-dependencies]
glutin = "0.24"

[lints]
workspace = true
