[package]
name = "gl_generator"
version = "0.14.0"
authors = [
    "Brendan Zabarauskas <bjzaba@yahoo.com.au>",
    "Corey Richardson",
    "Arseny Kapoulkine",
]
description = "Code generators for creating bindings to the Khronos OpenGL APIs."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["api-bindings", "rendering::graphics-api"]
keywords = ["gl", "egl", "opengl", "khronos"]

[features]
unstable_generator_utils = []

[dependencies]
khronos_api = { version = "3.1.0", path = "../khronos_api" }
log = "0.4"
xml-rs = "0.8"

[lints]
workspace = true
